hackernews/reddit links

--- a/content/posts/2019-05-29-get-a-job-4.md
+++ b/content/posts/2019-05-29-get-a-job-4.md
@@ -17,8 +17,8 @@ tags:
 description: A guide that helps you maximize your offer.
 prev: "/blog/get-a-job-3/"
 next: "/series/intro-to-climate-change/"
-discussLinkTwitter: https://twitter.com/victorczhou/status/1133752584383205377
-discussLinkHN: https://news.ycombinator.com/item?id=20064900
+discussLinkReddit: https://www.reddit.com/r/cscareerquestions/comments/fwg4xe/feedbackadvice_on_blog/
+discussLinkHN: https://news.ycombinator.com/item?id=22801084
 ---
 ![Negotiation](https://github.com/gautamtata/blog/blob/master/static/media/tech4.png?raw=true)
 
