--- a/content/posts/2020-03-10-get-a-job-3.md
+++ b/content/posts/2020-03-10-get-a-job-3.md
@@ -16,6 +16,8 @@ tags:
 description: Cracking the behavioral and coding interview.
 prev: "/blog/get-a-job-2/"
 next: "/blog/get-a-job-4/"
+discussLinkReddit: https://www.reddit.com/r/cscareerquestions/comments/fwg4xe/feedbackadvice_on_blog/
+discussLinkHN: https://news.ycombinator.com/item?id=22801084
 ---
 
 ![](https://github.com/gautamtata/blog/blob/master/static/media/tech6.jpg?raw=true)
