--- a/content/posts/2020-03-09-get-a-job-2.md
+++ b/content/posts/2020-03-09-get-a-job-2.md
@@ -16,8 +16,8 @@ tags:
 description: Four ways to effectively apply to jobs.
 prev: "/blog/get-a-job-1/"
 next: "/blog/get-a-job-3/"
-discussLinkTwitter: https://twitter.com/victorczhou/status/1154055678518054912?s=20
-discussLinkHN: https://news.ycombinator.com/item?id=20524543
+discussLinkReddit: https://www.reddit.com/r/cscareerquestions/comments/fwg4xe/feedbackadvice_on_blog/
+discussLinkHN: https://news.ycombinator.com/item?id=22801084
 ---
 
 
