--- a/content/posts/2020-03-08-get-a-job-1.md
+++ b/content/posts/2020-03-08-get-a-job-1.md
@@ -33,8 +33,7 @@ The resume is what lands you those interviews. So, let's talk about what you can
 2. Beating the Applicant tracking system(ATS)
 3. Getting past the 6-second recruiter screen.
 4. Getting past the engineering manager.
-
-5. **A socially unethical experiment**
+right
 
 ## Example
 I'm going to give you an example of numbers on how your resume gets to the engineering manager.
@@ -124,22 +123,6 @@ The engineering managers are looking for the following skills
 In the valley, technical experience is, fortunately(unfortunately) found everywhere. Every other coder has worked someplace, knows X stack, etc. How do you differentiate yourself? Be excellent at soft-skills.
 Technical skills are important, don't get me wrong. But it's the soft skills that help you stand out from the crowd.
 
-## A Socially Unacceptable Experiment
-
-Here is what I did for **X company. (Not my current).** I created two email addresses, one of which was my primary email to apply for jobs and another, which was a throwaway for this experiment.
-
-I applied to the position which was (SWE New Grad) using the same resume except for the **following small changes.**
-
-In the resume for the throwaway company, I added the following keywords:
-Harvard, Google, Yale, Facebook, Microsoft, and every other programming language/skill on the planet F#, hardworking you name it.
-
-The only difference is that I wrote those keywords in **0.01px font.** making it invisible to any human except you guessed it the ATS.
-
-The result? The throwaway account got me an interview, and my primary account did not.
-
-I did the same experiment with 14 other companies: With my **edited resume with fake buzzwords**, I got interviews from 6/14 companies a 42% percent success rate, and with my primary account, it was a whopping 1/14 interviews. FOR THE EXACT SAME RESUME.
-
-I am not going to ask you to do this. It's **UNETHICAL**, and you should only do it for experimental purposes.
 
 ## Now What?
 
