--- a/content/posts/2020-03-09-get-a-job-2.md
+++ b/content/posts/2020-03-09-get-a-job-2.md
@@ -163,7 +163,7 @@ If you are talking to a recruiter, know your buzzwords. Mine was React, Machine-
 
 ### A Socially Unacceptable Experiment
 
-I went to a small school in the central valley. The best company that came to my School was In'n'out. So I decided to drive up two hours to Berkeley, CA and tried to attend the UC Berkeley Career Fair.
+I went to a small school in the central valley. The best company that came to my School was in&out. So I decided to drive up two hours to Berkeley, CA and tried to attend the UC Berkeley Career Fair.
 
 Here are two ways that you shouldn't do it:
 
