adding to blog 1

--- a/content/posts/2020-03-08-get-a-job-1.md
+++ b/content/posts/2020-03-08-get-a-job-1.md
@@ -116,9 +116,11 @@ Make sure that you have the right skills listed in your resume, have a professio
 
 Now, this is the most critical part. You've made it this far, and this decision breaks or makes the interview.
 
-The engineering managers are looking for the following skills
-1. Technical Experience: Whether it has been in a group project, solo project, or internships.
-2. Communication skills: Managers are very **BIG** on communication skills. It makes sense they have to manage a group of people, and they want to see whether or not you have the technical chops but the communication skills as well.
+The engineering managers are looking for the following skills: **ATTITUDE, APTITUDE AND CHEMISTRY**
+
+1. Attitude: Do you have the right attitude for this job? Do you really want to work here? **Are you going to be a good fit?**
+2. Aptitude: Do you have the skills to do the job? Do you have previous experience: Projects, Internships etc? This is usually resolved by using remote tests, hackerrank or some-other tool. While your Aptitude is not the biggest reason for hiring, you have to be good at what you say you're good at.
+3. Chemistry: Managers are very **BIG** on communication skills. It makes sense they have to manage a group of people, and they want to see whether or not you have the technical chops but the communication skills as well. They also want to see whether you can gel with other team members because if you're an excellent developer but an ass in general you will do the company more harm than good.
 
 In the valley, technical experience is, fortunately(unfortunately) found everywhere. Every other coder has worked someplace, knows X stack, etc. How do you differentiate yourself? Be excellent at soft-skills.
 Technical skills are important, don't get me wrong. But it's the soft skills that help you stand out from the crowd.
