adding to blog 1

--- a/content/posts/2020-03-10-get-a-job-3.md
+++ b/content/posts/2020-03-10-get-a-job-3.md
@@ -169,7 +169,7 @@ This is how an example might look like:
 >
 > Interviewer: Great. But do you think we can do better than quadratic time?
 >
-> Me: Umm, I guess, We can throw the list of numbers into hashmap where insertion is O(1), and as we add an keep checking if target - dadded number is in the hashMap until we get to a solution. The time complexity would be Linear (O(N)), and space complexity would be O(N).
+> Me: Umm, I guess, We can throw the list of numbers into hashmap where insertion is O(1), and as we add an keep checking if target + added number is in the hashMap until we get to a solution. The time complexity would be Linear (O(N)), and space complexity would be O(N).
 >
 > Interviewer: Yeah, that sounds like a good solution! Let's code it up.
 
