--- a/content/posts/2020-03-08-get-a-job-1.md
+++ b/content/posts/2020-03-08-get-a-job-1.md
@@ -63,7 +63,7 @@ So whether we like it or not, the ATS is here to stay.
 
 
 ### I. Basics Of How ATS Works
-The ATS parses a resume's content into categories and then scans those categories for specific keywords that have been predetermined and then rank the resume. If there was A**x%** match, then the resume is passed on to the recruiter.
+The ATS parses a resume's content into categories and then scans those categories for specific keywords that have been predetermined and then rank the resume. If there was A **X %** match, then the resume is passed on to the recruiter.
 
 So this only means that the ATS is designed to weed out the **least-qualified** applicants as opposed to identifying which candidates are the best.
 
