--- a/content/posts/2020-03-08-get-a-job-1.md
+++ b/content/posts/2020-03-08-get-a-job-1.md
@@ -101,7 +101,7 @@ For Example, if your job posting says:
 
 > We use the MERN stack and AWS.
 
-Make sure that you have the keyword "MERN stack" in your resume, as well as MongoDB, React.js, Node, and Express.js. The recruiters are not technical people. They are like a **pattern matching algorithm** who makes a binary 0 or 1 decision based on what skills they see.
+Make sure that you have the keyword "MERN stack" in your resume, as well as MongoDB, React.js, Node, and Express.js. The recruiters are not technical people. They are like a **pattern matching algorithm** who make a binary decision based on what skills they see.
 
 Recruiters are also known for discarding resumes for things that you and I think are irrelevant to whether or not you are qualified to do your job. Unfortunately, it happens, and here are some things to avoid.
 
