fixing broken links

--- a/content/posts/2020-03-10-get-a-job-3.md
+++ b/content/posts/2020-03-10-get-a-job-3.md
@@ -123,7 +123,9 @@ Take note of the question that you had to look up and try to solve it again with
 
 **Where should I practice questions from**: The sources that I used to practice are pretty well-known. I practiced using [Cracking The Coding Interview](http://www.crackingthecodinginterview.com/) and using [LeetCode](https://leetcode.com/)
 
-A great source that I found that someone created a curated list of 50 or so questions on (Leetcode)[https://www.leetcode.com/] and this list is by far the best out there. I have seen the same pattern of questions being repeated over and over in interviews just with a different language. [Leetcode favorite list](https://leetcode.com/list/xoqag3yj/)
+A great source that I found that someone created a curated list of 50 or so questions on [Leetcode](https://leetcode.com/list/xoqag3yj/) and this list is by far the best out there. I have seen the same pattern of questions being repeated over and over in interviews just with a different language. 
+
+[Leetcode favorite list](https://leetcode.com/list/xoqag3yj/)
 
 **How many questions should I do?**: My suggestion would be to approach the **Breadth of problems rather than the depth**. What I mean by that is try multiple variations of different data structures and algorithms as opposed to going deep in just one topic (say, Arrays).
 
