--- a/content/posts/2020-05-09-keras-nn.md
+++ b/content/posts/2020-05-09-keras-nn.md
@@ -5,7 +5,7 @@ dateModified: "2020-05-09T12:00:00.000Z"
 template: "post"
 draft: false
 slug: "/blog/first-glimpse-at-NN/"
-img: "https://gautamtata.com/media/keras-posts/keras-logo.png"
+img: ./media-link/deeplearning/mnist.png
 isML: true
 category: "Machine Learning"
 tags:
@@ -18,11 +18,7 @@ description: Keras is an easy-to-use abstraction built on top of tensorflow. Let
 prev: "/blog/get-a-job-3/"
 next: "/blog/get-a-job-3/"
 ---
-
-![](./media-link/keras-posts/keras-logo.png)
-
-
-# A first glimpse of a Neural network: Building a Digit Classifier
+![MNIST Dataset](./media-link/deeplearning/mnist.png)
 
 In this article, we will get a first look at what a Neural Network is and we will do this by building a **digit classifier**. A digit classifier (also called MNIST tutorial) is often called the "Hello World!" of Deep Learning.
 
@@ -36,24 +32,16 @@ The problem that we are trying to solve is for a machine to recognize and classi
 
 Loading the MNIST Dataset into Keras is extremely easy. It comes with the library so you don't have to import any external libraries/files. 
 
-```python
-from keras.datasets import mnist
-(train_images, train_labels), (test_images, test_labels) = mnist.load_data()
-```
+![Loading MNIST Dataset](./media-link/deeplearning/code_snippet/snippet1.svg)
 
 The data is in the form of four [Numpy arrays](https://numpy.org/). (For those of you who are not familiar with Numpy, I have linked the documentation. It is highly reccommended to learn NumPy, Pandas and Matplotlib as they are the bread and butter tools to getting started with Machine Learning.)
 
-The ```train_images``` and ```train_labels``` are called the training dataset. We will use this data to train our neural network. And concurrently, the ```test_labels``` and ```test_images``` are our testing dataset which will use to see how accurately our network performed.
 
-To look at what the training data is, you can use ```numpy.shape``` or just print the labels out. Here is how you can do that:
+The *train_images* and *train_labels* are called the training dataset. We will use this data to train our neural network. And concurrently, the *test_labels* and *test_images* are our testing dataset which will use to see how accurately our network performed.
 
-``` python
->>> train_images.shape
-(60000, 28, 28)
->>> train_labels
-array([5, 0, 4, ..., 6, 8], dtype=uint8)
-```
+To look at what the training data is, you can use *numpy.shape* or just print the labels out. Here is how you can do that:
 
+![A look at the training data](./media-link/deeplearning/code_snippet/snippet21.svg)
 
 Here are the steps on how our digit classifier will work:
 
@@ -66,14 +54,7 @@ Here are the steps on how our digit classifier will work:
 
 Let's start by writing the code to represent the core-building blocks of a neural network -- The Layers. You can imagine a layer like this: Some data goes in, and it comes out in a more representational form. Specifically, layers extract meaningful representations out of the data fed into them.
 
-```python
-from keras import models
-from keras import layers
-
-network = models.Sequential()
-network.add(layers.Dense(512, activation='sigmoid', input_shape=(28 * 28, )))
-network.add(layers.Dense(10, activation='softmax'))
-```
+![A look at the network architechture](./media-link/deeplearning/code_snippet/snippet3.svg)
 
 Here, our network consists of a sequence of Dense layers (the layers are densely connected). The second layer is a 10-way softmax layer, which means that the output will be an array of 10 probability scores (summing to 1). Each score will be the probabiliity that the current digit image belongs to one of our 10 digit classes.
 
@@ -86,52 +67,25 @@ We will talk more about the loss function and the optimizer more thoroughly over
 
 ### Compilation step
 
-```python
-network.compile(optimizer='rmsprop',
-               loss = 'categorical_crossentropy',
-               metrics=['accuracy'])
-```
+![The compilation step](./media-link/deeplearning/code_snippet/snippet4.svg)
 
 Before the training starts, we will preprocess the data by reshaping it into the shape that the network expects and scaling it so all values are between 0 and 1.
 
 ### Preparing the Image Data
 
-To shape the data into the way the network expects it, we will use ```numpy.reshape()``` and ```numpy.astype()```
+To shape the data into the way the network expects it, we will use *numpy.reshape()* and *numpy.astype()*
 
-```python
-train_images = train_images.reshape((60000, 28 * 28))
-train_images = train_images.astype('float32') / 255
-
-test_images = test_images.reshape((10000, 28 * 28))
-test_images = test_images.astype('float32')/ 255
-```
+![Preparing the data](./media-link/deeplearning/code_snippet/snippet5.svg)
 
 ### Preparing the labels
 
 We use [keras.utils.to_categorical](https://keras.io/api/utils/python_utils/#to_categorical-function) to convert a class vector (integers) to binary class matrix.
 
-``` python
-from keras.utils import to_categorical
-
-train_images = to_categorical(train_labels)
-test_images = to_categorical(test_images)
-```
+![Preparing the labels](./media-link/deeplearning/code_snippet/snippet6.svg)
 
 We are now ready to train our network which we can do with a call to the networks fit method i.e We fit the model to it's training data.
 
-```python
-# An example of how the epochs will look like
->>> network.fit(train_images, test_images, epochs=5, batch_size=128)
-Epoch 1/5
-60000/60000   [=====================================] - 9s - loss: 0.2524 - acc:0.9273
-# As you can see after our first epoch (first iteration) we achieve 92.73% accuracy.
-Epoch 2/5
-51328/60000   [=====================================] - 1s - loss: 0.1035 - acc:0.9692
-.
-.
-Epoch 5/5
-60000/60000   [=====================================] - 1s - loss: 0.1002 - acc:0.9793
-```
+![Training our network](./media-link/deeplearning/code_snippet/snippet7.svg)
 
 As you can see, we reach an accuracy over 98%! Our machine is now more easily able to classify handwritten digits (better than humans infact.) But, the test-set accuracy turns turns out to be less than the training set accuracy. This gap between training accuracy and test accuracy is an example of what is called **Overfitting**(We will talk more about overfitting and underfitting in the coming chapters.). Overfitting: Machines tend to perform worsew on new data than on the training data.
 
@@ -140,7 +94,6 @@ As you can see, we reach an accuracy over 98%! Our machine is now more easily ab
 We've reached the conclusion of our first example. Congratulations on making it this far -- If you didn't quite understand what is going on, don't worry. We will cover all the keywords and the flow of what is happening in much more detail in the coming chapters. This example was more for getting started and getting your hands dirty with code.
 
 As always, thanks for making it this far! In the next chapter we will talk about data representations with neural networks. See you there!
-
 
 
 
