--- a/content/posts/2020-05-09-keras-nn.md
+++ b/content/posts/2020-05-09-keras-nn.md
@@ -15,7 +15,7 @@ tags:
   - "Neural Networks"
   - "For Beginners"
 description: Keras is an easy-to-use abstraction built on top of tensorflow. Let's use Keras to build our first "hello world" of Machine Learning - The Digit Classifier
-prev: "/blog/get-a-job-3/"
+prev: "/blog/history-of-machine-learning/"
 next: "/blog/get-a-job-3/"
 ---
 ![MNIST Dataset](./media-link/deeplearning/mnist.png)
