--- a/content/posts/2019-05-29-get-a-job-4.md
+++ b/content/posts/2019-05-29-get-a-job-4.md
@@ -16,7 +16,7 @@ tags:
   - "cracking the tech interview"
 description: A guide that helps you maximize your offer.
 prev: "/blog/get-a-job-3/"
-next: "/series/intro-to-climate-change/"
+next: "/blog/get-a-job-3/"
 discussLinkReddit: https://www.reddit.com/r/cscareerquestions/comments/fwg4xe/feedbackadvice_on_blog/
 discussLinkHN: https://news.ycombinator.com/item?id=22801084
 ---
