final color scheme

--- a/content/posts/2020-05-09-keras-nn.md
+++ b/content/posts/2020-05-09-keras-nn.md
@@ -32,6 +32,12 @@ The problem that we are trying to solve is for a machine to recognize and classi
 
 Loading the MNIST Dataset into Keras is extremely easy. It comes with the library so you don't have to import any external libraries/files. 
 
+```python
+from keras.datasets import mnist
+(train_images, train_labels), (test_images, test_labels) = mnist.load_data()
+
+```
+
 ![Loading MNIST Dataset](./media-link/deeplearning/code_snippet/snippet1.svg)
 
 The data is in the form of four [Numpy arrays](https://numpy.org/). (For those of you who are not familiar with Numpy, I have linked the documentation. It is highly reccommended to learn NumPy, Pandas and Matplotlib as they are the bread and butter tools to getting started with Machine Learning.)
